@@ -18,6 +18,10 @@ Release 1.3-SNAPSHOT
 * History buffer numbers are now numbered oldest to newest, so that 
   the buffer number for a given buffer will not change until the 
   session ends or the buffer is removed from history.
+* Added --repeat to \go, so that a query can be executed multiple times.
+  During this execution the variable ${iteration} can be referred to
+  within the query to determine which iteration of the repeat cycle
+  the query is on (starting from 0).
 * Added ${scale} and changed the definition of ${precision}. These
   two values now work together when displaying floating point
   values exactly as one would expect them to.
